# imav_detector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
Object_Detection/: CMakeLists.txt  DisplayFromWebcam.cpp  DisplayImage.cpp
OpenCVTests/: CMakeLists.txt  YI_Cam_Relay.txt
cfg/: detector.yaml  gaussian.yaml  params.yaml  threshold.yaml
detector/: CMakeLists.txt  package.xml
detector/cfg/: detector.yaml  reconfig.cfg
detector/include/detector/: detector.h
detector/launch/: gscam.launch  main.launch  picker.launch  tuner.launch
detector/src/: detector.cxx  hsvPicker.py  hsvTuner.py
detector_msgs/: CMakeLists.txt  package.xml
detector_msgs/msg/: BBPose.msg
include/detector/: detector.h
launch/: main.launch  picker.launch
msg/: BBPose.msg  BBPoses.msg  BBox.msg  BBoxes.msg
src/: detector.cxx  detector.h  hsvPicker.py  makeGrid.py  threshold.cxx
